manifests/app/admin-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mxadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mxadmin
  template:
    metadata:
      labels:
        app: mxadmin
    spec:
      containers:
      - name: mxadmin
        image: 348096830755.dkr.ecr.us-east-2.amazonaws.com/tagit:admin_1
        ports:
        - containerPort: 8080
